import 'package:master_diploma_vrp/model/customer_info.dart';

class Problem {
  List<CustomerInfo> customer = [];
  List<List<double>> dist = [];
}
